--- a/popup.html
+++ b/popup.html
@@ -148,7 +148,7 @@
 
     <div class="disclaimer">
         <p><strong>Disclaimer:</strong> This tool is provided "as is" without any warranties of any kind. Use it at your own risk. The developer, Alexandre Salem, assumes no responsibility for any issues arising from the use of this tool. Always ensure you are compliant with the terms of service of both Marine Traffic and Home Assistant.</p>
-        <p>For support, documentation, and more information, visit the official <a href="https://www.home-assistant.io" target="_blank">Home Assistant website</a>.</p>
+        <p>For documentation, and more information, visit <a href="https://github.com/gamani/MarineTrafficToHA/blob/main/README.md" target="_blank">MarineTrafficToHA GitHub</a>.</p>
     </div>
 
     <script src="popup.js"></script>
